# interhackBCN

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  data_summary.txt  git_sync.ps1  intro.md  requirements.txt  scratch_graph.py
.claude/: settings.local.json
apps/api/: .env.example  alembic.ini  database.py  errors.py  main.py  models.py  pyproject.toml  railpack.json  requirements.txt
apps/api/agent/: system_prompt.py  tools.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_enrich_product_hierarchy.py
apps/api/routers/: actions.py  alerts.py  chat.py  clients.py  metrics.py  recalc.py  stats.py  voice.py
apps/api/tests/: test_health.py
apps/ml/: calibrate.py  classify.py  etl.py  pyproject.toml  run_signals.py  scoring.py  signals_commodity.py  signals_technical.py  slides_data.py
apps/ml/notebooks/: EDA.ipynb
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Disclaimer.tsx
apps/web/lib/: api.ts
docs/: DEMO_SCRIPT.md  F0_EDA.md  MODELS.md  SETUP.md  TEAM.md
infra/n8n/: README.md  workflow.json
infra/render/: README.md  render.yaml
scripts/: chat_repl.py  demo_metrics.py  setup.ps1  setup.sh  test_chat.py  test_gemini.py
