[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse API · FastAPI + Claude tool-use over Postgres"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "anthropic>=0.25",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
